# takktile_raspberry

./: .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py  takktile_raspberry.rosinstall  takktile_ros.rosinstall
launch/: robotiq_takktile.launch
msg/: Info.msg  RobotiqTouch.msg
scripts/: read_takkstrip.py  robotiq_takktile.py
src/: __init__.py  read_takkstrip.py
src/takktile_raspberry/: read_takkstrip.py
takktile_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
takktile_interface/launch/: takktile_robotiq.launch
takktile_interface/scripts/: takktile_robotiq.py
takktile_interface/src/: tk_robotiq_udp.py
takktile_interface/src/takktile_interface/: __init__.py  utils.py
takktile_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
takktile_raspberry/: CMakeLists.txt  package.xml
takktile_raspberry/launch/: robotiq_over_udp.launch
takktile_raspberry/scripts/: robotiq_over_udp.py  takktile_robotiq.py
takktile_raspberry/src/: tk_robotiq_udp.py
takktile_raspberry/src/takktile_raspberry/: __init__.py  read_takkstrip.py
